# ovos-arch-linux

./: .gitignore  Makefile  README.md  aur-repo.sh  build-packages.ps1  config-parser.ps1  config-parser.psm1  convert-buildroot-packages.ps1  generate-makefile.ps1  ignore-buildroot-packages.txt  makefile-parser.ps1  makefile-parser.psm1  package-ignore.txt  package-map.txt  pkgignore.txt  utils.ps1  utils.psm1  virtual-packages.txt
.github/workflows/: build-aarch64-image.yml  build-images.yml  build-makepkg-container-image.yml  scan-for-changes.yml  update-makefile.yml
ISOs/: build-ova-amd64-generic.sh  build-rpi-aarch64-generic.sh  build-rpi-aarch64-mark2.sh
ISOs/amd64-ova/: Containerfile  build.sh  customize.sh  install.sh  ovos-arch.ovf  pacstrap-docker
ISOs/common/: customize.sh  img-build.sh  packages.txt
PKGBUILDs/: Makefile
PKGBUILDs-extra/nsync/: .SRCINFO  PKGBUILD
PKGBUILDs-extra/onnxruntime/: .SRCINFO  PKGBUILD
PKGBUILDs-extra/onnxruntime-bin/: .SRCINFO  PKGBUILD
PKGBUILDs-extra/python-adapt-parser/: .SRCINFO  PKGBUILD
PKGBUILDs-extra/python-bitstruct/: .SRCINFO  PKGBUILD
PKGBUILDs-extra/python-bs4/: .SRCINFO  LICENSE  PKGBUILD
PKGBUILDs-extra/python-cattrs/: .SRCINFO  PKGBUILD
PKGBUILDs-extra/python-combo-lock/: .SRCINFO  PKGBUILD
PKGBUILDs-extra/python-gradio/: .SRCINFO  (+1 more)
PKGBUILDs-extra/python-whispercpp/: .SRCINFO  CMakeLists.txt  PKGBUILD
imgbuild/: Containerfile  README.md
templates/: Makefile
tools/: aur-repo.sh  config-parser.psm1  convert-buildroot-packages.ps1  generate-makefile.ps1  python-module-utils.psm1  utils.psm1
(+455 files in other folders)
